# semtools

./: .depends.mk  .gitignore  Dockerfile  LICENSE  Makefile  Makefile.old  README.md  WORKSPACE  WORKSPACE.debian  WORKSPACE.old  base.sh  conf.sh  setup.txt  utils.bzl
.orig/: Dockerfile.new
bazel/: BUILD  BUILD.bazel  Dockerfile  bazel.bazelrc  deps.bzl  deps_spec.yaml  pkgs.sh  srcs.sh
bazel/.devcontainer/: Dockerfile  devcontainer.json
bazel/libs/: Dockerfile  pkgs.sh  srcs.sh
bootstrap/: .bazelrc  BUILD  Makefile  WORKSPACE
clang/: BUILD  Dockerfile  Make.user.mk  deps.bzl  deps.sh  pkgs.sh  srcs.sh  tests.yaml
clang/.devcontainer/: Dockerfile  devcontainer.json
docker/: BUILD  Dockerfile  deps.bzl  pkgs.sh  srcs.sh  tests.yaml
golang/: BUILD  Dockerfile  deps.bzl  pkgs.sh  srcs.sh  tests.yaml.tpl
golang/.devcontainer/: devcontainer.json
java/: BUILD  deps.bzl  tests.yaml.tpl
julia/: .dockerignore  BUILD.bazel  Dockerfile  Dockerfile.dev  Make.inc.mk  Make.user.mk  Makefile  deps.sh  llvm.mk  pkgs.sh  src.Dockerfile  srcs.sh  tar.Dockerfile
julia/.devcontainer/: devcontainer.json  old.Dockerfile
kubernetes/: pkgs.sh  srcs.sh
kubernetes/libs/: srcs.sh
pesto/: .bazelrc  .gitignore  BUILD  BUILD.bazel  bazel.rc  bazel.rc.old  pull-ready.txt  qpx-build.sh  qpx-test.sh  qpx-update.sh  rule_defs.bzl  run_defs.bzl
pesto/bazel/: BUILD.bazel
pesto/bzl/rules/closure/: BUILD.bazel
pesto/bzl/rules/python/: BUILD.bazel
pesto/bzl/skydoc/: BUILD.bazel
pesto/bzl/skylib/: BUILD.bazel
pesto/bzl/toolchains/: BUILD.bazel
pesto/cc/: BUILD.bazel  BUILD.bzl  BUILD.tpl  CROSSTOOL.bzl  CROSSTOOL.tpl  cc_wrapper.tpl  repo_defs.bzl  rule_defs.bzl
pesto/cc/clang/: BUILD  BUILD.bazel  CROSSTOOL  include  qpx-build.sh
pesto/cc/clang_tools_extra/: BUILD.bazel
pesto/cc/compiler_rt/: BUILD.bazel
pesto/cc/gcc/: BUILD  BUILD.bazel  CROSSTOOL  qpx-build.sh  repo_defs.bzl
pesto/cc/llvm/: BUILD.bazel  qpx-build.sh
pesto/cc/llvm/patches/: BUILD.bazel  common.bzl  expand_cmake_vars.py  llvm.bzl
pesto/dnn/benchmarks/: BUILD.bazel
pesto/dnn/infer/: BUILD.bazel
pesto/dnn/keras/: BUILD.bazel
pesto/dnn/keras_applications/: BUILD.bazel
pesto/dnn/keras_contrib/: BUILD.bazel
pesto/dnn/keras_preprocessing/: BUILD.bazel
pesto/dnn/lingvo/: BUILD.bazel
pesto/dnn/models/: BUILD.bazel
pesto/dnn/ngraph/: BUILD.bazel
pesto/dnn/ngraph_tf/: BUILD.bazel
pesto/dnn/probability/: BUILD.bazel
pesto/dnn/tensor2tensor/: BUILD.bazel
pesto/el/magit/: BUILD.bazel
pesto/el/org_mode/: BUILD.bazel
pesto/el/spacemacs/: BUILD.bazel
pesto/emacs/: BUILD.bazel
pesto/git/: BUILD.bazel  rule_defs.bzl
pesto/google/benchmark/: BUILD.bazel
pesto/google/boringssl/: BUILD.bazel
pesto/google/double_conversion/: BUILD.bazel
pesto/google/farmhash/: BUILD.bazel
pesto/google/flatbuffers/: BUILD.bazel
pesto/google/gemmlowp/: BUILD.bazel
pesto/google/googleapis/: BUILD.bazel
pesto/google/googletest/: BUILD.bazel
pesto/google/highwayhash/: BUILD.bazel
pesto/google/j2objc/: BUILD.bazel
pesto/google/nsync/: BUILD.bazel
pesto/google/or_tools/: BUILD.bazel
pesto/google/pprof/: BUILD.bazel
pesto/google/protobuf/: BUILD.bazel
pesto/google/protobuf/patches/: BUILD
pesto/google/re2/: BUILD.bazel
pesto/google/snappy/: BUILD.bazel
pesto/julia/: BUILD.bazel
pesto/nil/rocm/: BUILD.bazel  build_defs.bzl
pesto/nil/sycl/: BUILD.bazel  build_defs.bzl  platform.bzl
pesto/nlp/CoreNLP/: BUILD.bazel
pesto/nlp/nltk/: BUILD.bazel
pesto/nlp/spacy/: BUILD.bazel
pesto/pesto/: BUILD.bazel  configure.py  keys.py  make.py  make_parser.py  repo.py  root.py  specs.py  templates.py  workspace.py
pesto/pesto/old/: foreign_defs.bzl  orig_rule_defs.bzl  repo_defs.bzl  repo_rule_defs.bzl
pesto/pesto/tests/: conftest.py  test_repo.py  test_root.py
pesto/py/: BUILD.bazel  rule_defs.bzl
pesto/py/abseil/: BUILD.bazel
pesto/py/astor/: BUILD.bazel
pesto/py/astroid/: BUILD.bazel
pesto/py/autopep8/: BUILD.bazel
pesto/py/camelot/: BUILD.bazel
pesto/py/cython/: BUILD.bazel
pesto/py/flake8/: BUILD.bazel
pesto/py/gast/: BUILD.bazel
pesto/py/glances/: BUILD.bazel
pesto/py/h5py/: BUILD.bazel
pesto/py/jedi/: BUILD.bazel
pesto/py/numpy/: BUILD.bazel
pesto/py/pandas/: BUILD.bazel
pesto/py/pip/: BUILD.bazel
pesto/py/pycodestyle/: BUILD.bazel
pesto/py/pylint/: BUILD.bazel
pesto/py/pytest/: BUILD.bazel
pesto/py/pyyaml/: BUILD.bazel
pesto/py/setuptools/: BUILD.bazel
pesto/py/six/: BUILD.bazel
pesto/py/termcolor/: BUILD.bazel
pesto/py/wheel/: BUILD.bazel
pesto/py/yapf/: BUILD.bazel
pesto/python/: BUILD.bazel  std-build.sh
pesto/rtags/: BUILD.bazel
pesto/src/: BUILD.bazel  python.sh
pesto/std/: BUILD.bazel  python.sh  rule_defs.bzl
pesto/sys/: .gitignore  BUILD.bazel  build_defs.bzl  python.sh  rule_defs.bzl
pesto/tensorboard/: BUILD.bazel
pesto/tensorflow/: BUILD.bazel  bazel.rc  repo_defs.bzl  std-build.sh  std_repo_defs.bzl
pesto/tensorflow/patches/: BUILD.bazel
pesto/tensorflow/patches/tensorflow/contrib/: BUILD  __init__.py
pesto/tensorflow/patches/tensorflow/tools/pip_package/: BUILD
python/: BUILD  BUILD.bazel  Dockerfile  WORKSPACE  build.bzl  deps.bzl  pkgs.sh  srcs.sh  workspace.bzl
python/.devcontainer/: Dockerfile  devcontainer.json
python/rbe/: BUILD  deps.bzl
python/test/: BUILD
pytorch/: .dockerignore  Dockerfile  pkgs.sh  srcs.sh
rust/: BUILD  Dockerfile  config.toml  pkgs.sh  srcs.sh
sample/: BUILD  Makefile  WORKSPACE  centos_rpm.bzl  deps.bzl
sample/centos7/: BUILD  WORKSPACE  cloudbuild.yaml  deps.bzl  deps_spec.yaml  file_updates.yaml  revisions.bzl  test.yaml
sample/debian/: cloudbuild.yaml
sample/debian10/: BUILD  WORKSPACE  cloudbuild.yaml  deps.bzl  deps_spec.yaml  file_updates.yaml  revisions.bzl  test.yaml
tensorflow/: Dockerfile  pkgs.sh  srcs.sh
typescript/: Dockerfile  pkgs.sh  srcs.sh
ubuntu/: BUILD  Dockerfile  Dockerfile.dev  Makefile  buster.Dockerfile  focal.Dockerfile  metadata_summary.yaml  pkgs.sh  slim.Dockerfile  srcs.sh  ubu-base.Dockerfile
(+79 files in other folders)
