# -*- Python -*-
# Copyright 2018 Quantapix Authors. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# =============================================================================

package(default_visibility=["//visibility:public"])

licenses(["notice"])

load("@//:run_defs.bzl", "root_repo")
root_repo(root="/home/qpix/clone/pesto")

# -*- Python -*-
# PULLED FROM BUILD!!!
#

constraint_setting(name="tools_stack")

constraint_value(
    name="sys_stack",
    constraint_setting=":tools_stack",
)

platform(
    name="sys_platform",
    constraint_values=[
        "@bazel_tools//platforms:x86_64",
        "@bazel_tools//platforms:linux",
        ":sys_stack",
    ],
)

constraint_value(
    name="std_stack",
    constraint_setting=":tools_stack",
)

platform(
    name="std_platform",
    constraint_values=[
        "@bazel_tools//platforms:x86_64",
        "@bazel_tools//platforms:linux",
        ":std_stack",
    ],
)

constraint_value(
    name="src_stack",
    constraint_setting=":tools_stack",
)

platform(
    name="src_platform",
    constraint_values=[
        "@bazel_tools//platforms:x86_64",
        "@bazel_tools//platforms:linux",
        ":src_stack",
    ],
)

# filegroup(
#     name="formulate",
#     srcs=["@python//:formulate", "@py_numpy//numpy:formulate"],
# )

# filegroup(name="bootstrap", srcs=["@py//:py"])

# filegroup(name="compile", srcs=["@py//pesto_bins"])
