load("@rules_python//python:defs.bzl", "py_runtime", "py_runtime_pair", "py_binary", "py_test")

# load("@//:run_defs.bzl", "repo")
# repo(root="/home/qpix/clone/pesto", name="python",)
# load("@pip//:requirements.bzl", "requirement")

package(default_visibility=["//visibility:public"])
licenses(["notice"])

exports_files(glob(["*.bzl"]))

py_runtime(
    name = "py2_runtime",
    files = ["@python2//:files"],
    interpreter = "@python2//:qpx_bin",
    python_version = "PY2",
)

py_runtime(
    name = "py3_runtime",
    files = ["@python3//:files"],
    interpreter = "@python3//:qpx_bin",
    python_version = "PY3",
)

py_runtime_pair(
    name = "runtime_pair",
    py2_runtime = ":py2_runtime",
    py3_runtime = ":py3_runtime",
)

toolchain(
    name = "py_toolchain",
    toolchain = ":runtime_pair",
    toolchain_type = "@bazel_tools//tools/python:toolchain_type",
)

py_binary(
    name = "main",
    srcs = ["main.py"],
    deps = [ requirement("boto3"), ],
)

py_test(
    name = "test",
    srcs = ["test.py"],
    deps = [":main"],
)
