
package(default_visibility=["//visibility:public"])

licenses(["notice"])

exports_files(["rule_defs.bzl"])

load(":rule_defs.bzl", "venvs")
venvs([
    "pip",
    # "setuptools",
    "wheel",
    # "pytest",
    "six",
    "astor",
    "abseil",
    "gast",
    # "termcolor",
])

# py_binary(
#     name="py",
#     srcs=["py.py", "//py_libs"],
#     data=["//py_bins"],
# )
