# -*- Python -*-
# Copyright 2018 Quantapix Authors. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# =============================================================================

package(default_visibility=["//visibility:public"])

licenses(["notice"])

exports_files(["rule_defs.bzl"])

load("//:rule_defs.bzl", "install", "profile")

install("cc_gcc", "@cc_gcc//:make", outs=["bin/gcc"])
install("cc_llvm", "@cc_llvm//:cmake", outs=["bin/clang"])
install("emacs", "@emacs//:make")
install("git", "@git//:make")
install("lib_jpeg", "@lib_jpeg//:cmake", outs=["lib64/libjpeg.a"])
install("python", "@python//:make", outs=["bin/python3"])

profile("git", "@git//:make")

sh_binary(
    name="python_env",
    srcs=["python.sh"],
    data=["@//py:venvs/std"],
)
