load("//:rule_defs.bzl", "install", "profile")

exports_files(["rule_defs.bzl"])


install("cc_gcc", "@cc_gcc//:make", outs=["bin/gcc"])
install("cc_llvm", "@cc_llvm//:cmake", outs=["bin/clang"])
install("emacs", "@emacs//:make")
install("git", "@git//:make")
install("lib_jpeg", "@lib_jpeg//:cmake", outs=["lib64/libjpeg.a"])
install("python", "@python//:make", outs=["bin/python3"])

profile("git", "@git//:make")

sh_binary(
    name="python_env",
    srcs=["python.sh"],
    data=["@//py:venvs/std"],
)
