
package(default_visibility=["//visibility:public"])

licenses(["notice"])

exports_files(["build_defs.bzl"] + glob(["bin/*"]))

load("//:rule_defs.bzl", "libs", "links")

libs((
    ("curl", "curl"),
    ("gif", "gif"),
    ("lmdb", "lmdb"),
    ("pcre", "pcre"),
    ("sqlite", "sqlite3"),
    ("zlib", "z"),
))

alias(name="org_sqlite", actual="sqlite")

links((
    "autoconf",
    "cmake",
    "emacs",
    "git",
    "make",
    "nasm",
    "python3",
    "swig",
))

py_library(name="python_lib")

sh_binary(
    name="python",
    srcs=["python.sh"],
    data=["@//py:venvs/sys"],
)

filegroup(
    name="templates",
    srcs=[],
)
