# -*- Python -*-
# Copyright 2018 Quantapix Authors. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# =============================================================================

package(default_visibility=["//visibility:public"])

licenses(["notice"])

exports_files(glob(["*.bzl"]))

load("@//:run_defs.bzl", "repo")
repo(
    root="/home/qpix/clone/pesto",
    name="cc/gcc",
)

# -*- Python -*-
# PULLED FROM BUILD!!!
#

load(
    "@//cc:rule_defs.bzl",
    "prep_toolchain",
    "create_links",
    "create_lists",
    "create_toolchain",
)

_name = "gcc"
prep_toolchain(_name)

create_links(
    "sys",
    {
        "ar": None,
        "as": None,
        "cpp": None,
        "dwp": None,
        "gcc": None,
        "gcov": None,
        "ld": None,
        "nm": None,
        "objcopy": None,
        "objdump": None,
        "profdata": "gprof",
        "strip": None,
    },
)

create_lists(
    "sys",
    {
        "drivers": [],
        "includes": [],
        "libraries": [],
        "xray": [],
    },
)

create_toolchain("sys", _name)
