# -*- Python -*-
# Copyright 2018 Quantapix Authors. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# =============================================================================

package(default_visibility=["//visibility:public"])

licenses(["notice"])

exports_files(["build_defs.bzl"])

load(":build_defs.bzl", "if_sycl")
load(":platform.bzl", "sycl_library_path", "readlink_command")

config_setting(
    name="using_sycl_ccpp",
    define_values={
        "using_sycl": "true",
        "using_trisycl": "false",
    },
)

config_setting(
    name="using_sycl_trisycl",
    define_values={
        "using_sycl": "true",
        "using_trisycl": "true",
    },
)

cc_library(
    name="sycl_headers",
    hdrs=glob([
        "**/*.h",
        "**/*.hpp",
    ]),
    includes=[".", "include"],
)

cc_library(
    name="syclrt",
    srcs=[sycl_library_path("ComputeCpp")],
    data=[sycl_library_path("ComputeCpp")],
    includes=["include/"],
    linkstatic=0,
)

cc_library(
    name="sycl",
    deps=if_sycl([
        ":sycl_headers",
        ":syclrt",
    ]),
)
