
package(default_visibility=["//visibility:public"], )

licenses(["notice"])

exports_files(["LICENSE"], )

# load("@io_bazel_rules_closure//closure:defs.bzl", "filegroup_external")
# load("@org_tensorflow//tensorflow/tools/def_file_filter:def_file_filter_configure.bzl", "def_file_filter_configure")
